# EGProject

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.cache/clangd/index/: Main.cpp.9322B1988DD97B07.idx
CRT/: CMakeLists.txt
CRT/private/: PConsole.h  PMemory.h
CRT/public/: CRTAPI.h  PAlgorithm.h  PArena.h  PArray.h  PCircularBuffer.h  PConsole.h  PContainer.h  PFileIO.h  PMath.h  PMatrix.h  PMemory.h  PString.h  PTypes.h  PVector.h
CRT/src/: Arena.cpp  CircularBuffer.cpp  Math.cpp  Matrix.cpp  Memory.cpp  String.cpp  Vector.cpp
EGProject/: CMakeLists.txt
EGProject/src/: Arena.cpp  Arena.h  Array.h  Base.h  Events.h  Logging.cpp  Logging.h  Main.cpp  Platform.h
EGProject/src/Renderer/: Renderer.h
EGProject/src/Renderer/Vulkan/: DebugMessenger.h  Extensions.cpp  Extensions.h  Instance.cpp  Instance.h  StateImpl.h  Types.h  ValidationLayers.h  Vulkan.cpp
EGProject/src/Renderer/Vulkan/Debug/: DebugMessenger.cpp  Extensions.cpp  ValidationLayers.cpp
EGProject/src/Renderer/Vulkan/Stub/: DebugMessenger.cpp  Extensions.cpp  ValidationLayers.cpp
PCRT/: CMakeLists.txt
PCRT/Base/: CMakeLists.txt
PCRT/private/: PCRTAPI.h  PConsole.h  PMemory.h
PCRT/public/: PAlgorithm.h  PArena.h  PAssert.h  PConsole.h  PFileIO.h  PMath.h  PMatrix.h  PMemory.h  PSTDAPI.h  PString.h  PTypes.h  PVector.h
PCRT/src/: Arena.cpp  Math.cpp  Matrix.cpp  Memory.cpp  Startup.cpp  String.cpp  Vector.cpp
PEngine/: CMakeLists.txt
PEngine/Engine/: CMakeLists.txt
PEngine/Engine/include/: Game.h  Logging.h
PEngine/Engine/include/Core/: PAlgorithm.h  PArray.h  PCircularBuffer.h  PFileIO.h  PFunction.h  PMath.h  PMatrix.h  PString.h  PVector.h
PEngine/Engine/internal/: Engine.h
PEngine/Engine/src/: Engine.cpp  Engine.h  Events.h  Logging.cpp  Main.cpp
PEngine/Engine/src/Core/: FileIO.cpp  Math.cpp  Matrix.cpp  String.cpp  Vector.cpp
PEngine/Engine/src/Renderer/: Renderer.h
PEngine/Engine/src/Renderer/Vulkan/: Device.cpp  Device.h  Extensions.cpp  Extensions.h  Instance.cpp  Instance.h  Swapchain.cpp  Swapchain.h  Types.h  ValidationLayers.h  Vulkan.cpp
PEngine/Engine/src/Renderer/Vulkan/Debug/: DebugMessenger.cpp  Extensions.cpp  ValidationLayers.cpp
PEngine/Engine/src/Renderer/Vulkan/Stub/: Extensions.cpp  ValidationLayers.cpp
PEngine/Runtime/: CMakeLists.txt
PEngine/Runtime/src/: Main.cpp
PEngine/STD/: CMakeLists.txt
PEngine/STD/include/: PArena.h  PArray.h  PAssert.h  PCircularBuffer.h  PContainer.h  PFileIO.h  PFunction.h  PMatrix.h  PMemory.h  PString.h  PTypes.h
PEngine/STD/internal/: PArena.h  PMemory.h
PEngine/STD/src/: Arena.cpp  Math.cpp  Matrix.cpp  Memory.cpp  String.cpp  Vector.cpp
PEngine/include/Core/: PArena.h  PArray.h  PContainer.h  PFileIO.h  PMath.h  PMemory.h  PString.h  PTypes.h  PVector.h
PEngine/include/Engine/: Game.h  GameAPI.h  Logging.h
PEngine/src/Core/: Arena.cpp  Console.h  Memory.cpp  Memory.h  String.cpp  Vector.cpp
PEngine/src/Engine/: Base.h  Engine.cpp  Engine.h  Events.h  Logging.cpp  LoggingSetup.h
PEngine/src/Engine/Renderer/: Renderer.h
PEngine/src/Engine/Renderer/Vulkan/: Device.cpp  Device.h  Extensions.cpp  Extensions.h  Instance.cpp  Swapchain.cpp  Swapchain.h  Types.h  ValidationLayers.h  Vulkan.cpp
PEngine/src/Engine/Renderer/Vulkan/Debug/: DebugMessenger.cpp  Extensions.cpp  ValidationLayers.cpp
PEngine/src/Engine/Renderer/Vulkan/Stub/: DebugMessenger.cpp  Extensions.cpp  ValidationLayers.cpp
Runtime/: CMakeLists.txt
Runtime/src/: Main.cpp
assets/shaders/: first.frag  first.vert
examples/: CMakeLists.txt
examples/Test/: CMakeLists.txt
examples/Test/src/: Test.cpp
scripts/: build.py  remove_pdbs.cmake
scripts/helpers/: run_internal.py
